# SL_Practise

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/shibainu/li/sl_practiseproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shibainu/li/sl_practiseproject/: ApiViewModel.kt  MainActivity.kt  TestApplication.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
baseLib/: build.gradle
baseLib/src/main/java/com/shibainu/li/baselib/: BaseActivity.kt
cppLibs/: build.gradle
cppLibs/src/androidTest/java/com/shibainu/li/cpplibs/: ExampleInstrumentedTest.kt
cppLibs/src/main/: AndroidManifest.xml
cppLibs/src/main/cpp/: CMakeLists.txt  CppTestNative.cpp
cppLibs/src/main/java/com/shibainu/li/cpplibs/: CppTestMainActivity.kt  CppTestManagaer.kt  NeedCallBackClasz.kt  TestClassLoad.java  TestFiles.java  TestNativeCallBack.kt
cppLibs/src/main/res/layout/: activity_cpp_test_main.xml
dbLibs/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
httpLib/: build.gradle
uiLibs/: build.gradle
uiLibs/src/main/: AndroidManifest.xml
uiLibs/src/main/res/layout/: layout.xml  new_app_widget.xml
uiLibs/src/main/res/values/: strings.xml  styles.xml  themes.xml
uiLibs/src/main/res/values-night-v31/: themes.xml
uiLibs/src/main/res/values-v21/: styles.xml
uiLibs/src/main/res/values-v31/: styles.xml  themes.xml
uiLibs/src/main/res/xml/: actions.xml
(+12 files in other folders)
